feat: add prisma models and google oauth

--- a/env.example
+++ b/env.example
@@ -1,15 +1,18 @@
-# Database
-DATABASE_URL="postgresql://user:password@localhost:5432/calmsync?schema=public"
+# Database - PostgreSQL (Neon recommended)
+# Get your connection string from: https://console.neon.tech/
+DATABASE_URL="postgresql://user:password@host.region.neon.tech/calmsync?sslmode=require"
 
-# Next Auth
-NEXTAUTH_SECRET="your-secret-here"
+# NextAuth Configuration
+# Generate with: openssl rand -base64 32
+NEXTAUTH_SECRET="your-super-secret-32-character-minimum-string"
 NEXTAUTH_URL="http://localhost:3000"
 
 # Google OAuth
-GOOGLE_CLIENT_ID="your-google-client-id"
+# Get credentials from: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID="your-google-client-id.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="your-google-client-secret"
 
-# Sentry
-NEXT_PUBLIC_SENTRY_DSN="your-sentry-dsn"
+# Sentry (Optional - for error monitoring)
+NEXT_PUBLIC_SENTRY_DSN="https://your-sentry-dsn@sentry.io/project-id"
 SENTRY_AUTH_TOKEN="your-sentry-auth-token"
 
