--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   },
   "packageManager": "pnpm@10.22.0",
   "dependencies": {
-    "@prisma/client": "^7.0.0",
+    "@auth/prisma-adapter": "^2.11.1",
+    "@prisma/client": "^6.19.0",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@sentry/nextjs": "^10.26.0",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "next": "^16.0.3",
+    "next-auth": "5.0.0-beta.30",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.4.0"
@@ -31,6 +34,7 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
@@ -41,7 +45,7 @@
     "happy-dom": "^20.0.10",
     "jsdom": "^27.2.0",
     "postcss": "^8.5.6",
-    "prisma": "^7.0.0",
+    "prisma": "^6.19.0",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
     "vitest": "^4.0.13"
