feat: switch from google oauth to magic link authentication

--- a/env.example
+++ b/env.example
@@ -3,14 +3,14 @@
 DATABASE_URL="postgresql://user:password@host.region.neon.tech/calmsync?sslmode=require"
 
 # NextAuth Configuration
-# Generate with: openssl rand -base64 32
+# Generate with: -join ((48..57) + (65..90) + (97..122) | Get-Random -Count 32 | ForEach-Object {[char]$_})
 NEXTAUTH_SECRET="your-super-secret-32-character-minimum-string"
 NEXTAUTH_URL="http://localhost:3000"
 
-# Google OAuth
-# Get credentials from: https://console.cloud.google.com/apis/credentials
-GOOGLE_CLIENT_ID="your-google-client-id.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET="your-google-client-secret"
+# Email - Resend for Magic Link Authentication
+# Get your API key from: https://resend.com/api-keys
+RESEND_API_KEY="re_your_api_key_here"
+EMAIL_FROM="onboarding@resend.dev"
 
 # Sentry (Optional - for error monitoring)
 NEXT_PUBLIC_SENTRY_DSN="https://your-sentry-dsn@sentry.io/project-id"
