--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "clsx": "^2.1.1",
     "next": "^16.0.3",
     "next-auth": "5.0.0-beta.30",
+    "nodemailer": "^7.0.10",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "resend": "^6.5.2",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
@@ -36,6 +38,7 @@
     "@testing-library/react": "^16.3.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/node": "^24.10.1",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
