--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,13 @@
 # dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
+.yarn/install-state.gz
 
 # testing
 /coverage
+/cypress/screenshots
+/cypress/videos
 
 # next.js
 /.next/
@@ -29,9 +27,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# env files
-.env*.local
+# env files (do not commit)
 .env
+.env*.local
 
 # vercel
 .vercel
@@ -40,10 +38,10 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# prisma
-/prisma/migrations
-
-# sentry
-.sentryclirc
-
-
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.cursor/
