Fix landing page particles ID generation and improve dashboard background image visibility

--- a/env.example
+++ b/env.example
@@ -16,3 +16,13 @@ EMAIL_FROM="onboarding@resend.dev"
 NEXT_PUBLIC_SENTRY_DSN="https://your-sentry-dsn@sentry.io/project-id"
 SENTRY_AUTH_TOKEN="your-sentry-auth-token"
 
+# AI Image Generation (Optional - for dashboard background images)
+# Option 1: OpenAI DALL-E 3 (recommended for AI-generated images)
+# Get your API key from: https://platform.openai.com/api-keys
+OPENAI_API_KEY="sk-your-openai-api-key-here"
+
+# Option 2: Unsplash API (free alternative, requires attribution in production)
+# Get your API key from: https://unsplash.com/developers
+UNSPLASH_ACCESS_KEY="your-unsplash-access-key-here"
+# Note: If neither API key is provided, the app will use Unsplash Source (free but less reliable)
+
