Exclude cypress config files from TypeScript compilation to fix Vercel build error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,6 +53,11 @@
   "exclude": [
     "node_modules",
     "cypress",
-    "cypress.config.ts"
+    "cypress.config.ts",
+    "cypress.config.js",
+    "cypress.config.*",
+    "**/cypress.config.*",
+    "vitest.config.ts",
+    "vitest.config.*"
   ]
 }
