Fix build issues and improve email handling for production

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,6 +58,7 @@
     "cypress.config.*",
     "**/cypress.config.*",
     "vitest.config.ts",
-    "vitest.config.*"
+    "vitest.config.*",
+    "tests"
   ]
 }
