Fix: Add AUTH_SECRET configuration for NextAuth
- Added explicit secret configuration to NextAuth initialization
- Added validation and error logging for missing AUTH_SECRET
- Updated env.example to include AUTH_SECRET (NextAuth v5) alongside NEXTAUTH_SECRET (backward compatibility)
- Provides better error messages when secret is missing

--- a/env.example
+++ b/env.example
@@ -2,9 +2,11 @@
 # Get your connection string from: https://console.neon.tech/
 DATABASE_URL="postgresql://user:password@host.region.neon.tech/calmsync?sslmode=require"
 
-# NextAuth Configuration
-# Generate with: -join ((48..57) + (65..90) + (97..122) | Get-Random -Count 32 | ForEach-Object {[char]$_})
-NEXTAUTH_SECRET="your-super-secret-32-character-minimum-string"
+# NextAuth Configuration (NextAuth v5 uses AUTH_SECRET, but NEXTAUTH_SECRET also works)
+# Generate with: openssl rand -base64 32
+# Or in PowerShell: -join ((48..57) + (65..90) + (97..122) | Get-Random -Count 32 | ForEach-Object {[char]$_})
+AUTH_SECRET="your-super-secret-32-character-minimum-string"
+NEXTAUTH_SECRET="your-super-secret-32-character-minimum-string"  # Backward compatibility
 NEXTAUTH_URL="http://localhost:3000"
 
 # Email - Resend for Magic Link Authentication
